sort all events, future and past