@@ -185,7 +185,7 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public PageableAdvancedDto<EventDto> getAll(Pageable page, Principal principal) {
-        Page<Event> events = eventRepo.findAllByOrderByStartDate(page);
+        Page<Event> events = eventRepo.findAllByOrderByIdDesc(page);
 
         if (principal != null) {
             User user = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
@@ -198,9 +198,19 @@ public class EventServiceImpl implements EventService {
     public PageableAdvancedDto<EventDto> getEvents(Pageable page, Principal principal, FilterEventDto filterEventDto,
         String title) {
         if (Objects.isNull(filterEventDto)) {
-            return getAll(page, principal);
+            return getAllSortedEvents(page, principal);
         }
         return getAllFiltered(principal, page, filterEventDto, title);
+    }
+
+    private PageableAdvancedDto<EventDto> getAllSortedEvents(Pageable page, Principal principal) {
+        Page<Event> events = eventRepo.findAllEventsSortedByStartDate(page);
+
+        if (principal != null) {
+            User user = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
+            return buildPageableAdvancedDto(events, user.getId());
+        }
+        return buildPageableAdvancedDto(events);
     }
 
     private PageableAdvancedDto<EventDto> getAllFiltered(Principal principal, Pageable page,
@@ -667,7 +677,7 @@ public class EventServiceImpl implements EventService {
                 filtered = filterByStatusOpenClosed(filtered, filterEventDto.getStatuses());
             }
         }
-        return getSortedEvents(filtered);
+        return sortEvents(filtered);
     }
 
     private List<Event> getFilteredByEventTimeAndCitiesAndTags(List<Event> allEvents, FilterEventDto filterEventDto) {
@@ -805,27 +815,21 @@ public class EventServiceImpl implements EventService {
             .collect(Collectors.toList());
     }
 
-    private static List<Event> getSortedFutureEvents(List<Event> unsorted) {
-        return unsorted.stream()
-            .filter(Event::isRelevant)
+    private List<Event> sortEvents(List<Event> unsorted) {
+        ZonedDateTime now = ZonedDateTime.now();
+
+        List<Event> events = unsorted.stream()
+            .filter(event -> event.getDates().stream().noneMatch(date -> date.getFinishDate().isBefore(now)))
             .sorted(Comparator.comparing(event -> event.getDates().getFirst().getStartDate()))
             .collect(Collectors.toList());
-    }
 
-    private static List<Event> getSortedPastEvents(List<Event> unsorted) {
-        return unsorted.stream()
-            .filter(event -> !event.isRelevant())
-            .sorted(Comparator.comparing(event -> event.getDates().getFirst().getStartDate()))
-            .collect(Collectors.toList());
-    }
+        List<Event> pastEvents = unsorted.stream()
+            .filter(event -> event.getDates().stream().anyMatch(date -> date.getFinishDate().isBefore(now)))
+            .sorted(
+                Comparator.comparing(event -> event.getDates().getLast().getFinishDate(), Comparator.reverseOrder()))
+            .toList();
 
-    private static List<Event> getSortedEvents(List<Event> unsorted) {
-        List<Event> pastEvents = getSortedPastEvents(unsorted);
-        List<Event> futureEvents = getSortedFutureEvents(unsorted);
-
-        List<Event> events = new ArrayList<>();
         events.addAll(pastEvents);
-        events.addAll(futureEvents);
         return events;
     }
 
